--- a/package.json
+++ b/package.json
@@ -21,9 +21,10 @@
     "@uploadthing/react": "^6.2.4",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "dotenv": "^16.4.5",
     "lucide-react": "^0.340.0",
     "mongodb": "^6.4.0",
-    "mongoose": "^8.2.1",
+    "mongoose": "^8.3.1",
     "next": "14.1.0",
     "query-string": "^9.0.0",
     "react": "^18",
